@@ -28,7 +28,12 @@ Build system - Yes
 
 Binary compatible - Yes
 
-Source compatible - Yes
+Source compatible - Yes, except
+ - The constant DateTimeZone.UTC has changed implementation type
+   It used to be a FixedDateTimeZone, now it is a UTCDateTimeZone
+   This avoids a potential deadlock scenario
+   Serialization is unaffected
+   This change will only be observable if you cast the UTC constant to FixedDateTimeZone
 
 Serialization compatible - Yes
 
@@ -50,6 +55,10 @@ Bug fixes since 2.4
 - Handle complex prefix/suffix combinations [#154, #169]
   For example, 'm' for minutes and 'ms' for milliseconds
   which both start with 'm'
+
+- Fix deadlock [#171]
+  Referencing DateTimeZone and FixedDateTimeZone from two threads at startup could deadlock
+  Add package scoped UTCDateTimeZone class to avoid this
 
 
 Scala
